# qt-trayicon-crash-macos27

./: CMakeLists.txt  LICENSE.txt  README.md  main.cpp
